--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "check:prettier": "prettier --check .",
     "fix": "npm run fix:eslint && npm run fix:prettier",
     "fix:eslint": "eslint --fix .",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "fix:prettier": "prettier -w ."
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.0",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.2",
     "@astrolib/analytics": "^0.6.1",
@@ -31,19 +34,26 @@
     "astro": "^5.12.9",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
+    "framer-motion": "^12.23.24",
     "git-filter-repo": "^0.0.30",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "react-spring": "^10.0.3",
     "unpic": "^4.1.3"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.3.3",
+    "@astrojs/mdx": "^4.3.7",
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/tailwind": "^5.1.5",
     "@eslint/js": "^9.33.0",
     "@iconify-json/flat-color-icons": "^1.2.1",
     "@iconify-json/tabler": "^1.2.20",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/builder-vite": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
     "@tailwindcss/typography": "^0.5.16",
     "@types/hast": "^3.0.4",
     "@types/js-yaml": "^4.0.9",
@@ -53,7 +63,7 @@
     "@types/unist": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
-    "astro-compress": "2.3.8",
+    "astro-compress": "^2.3.8",
     "astro-eslint-parser": "^1.2.2",
     "eslint": "^9.33.0",
     "eslint-plugin-astro": "^1.3.1",
@@ -64,9 +74,10 @@
     "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
     "sharp": "0.34.3",
+    "storybook": "^8.6.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.39.0",
     "unist-util-visit": "^5.0.0"
   }
