--- a/package.json
+++ b/package.json
@@ -68,12 +68,17 @@
     "eslint": "^9.33.0",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.3.0",
+    "imagemin": "^8.0.1",
+    "imagemin-avif": "^0.1.6",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-webp": "^8.0.0",
     "js-yaml": "^4.1.0",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
-    "sharp": "0.34.3",
+    "sharp": "^0.34.3",
     "storybook": "^8.6.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
