--- a/package.json
+++ b/package.json
@@ -38,7 +38,12 @@
     "git-filter-repo": "^0.0.30",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "react": "^18.3.1",
+    "react-bits": "^1.0.5",
+    "react-dom": "^18.3.1",
+    "react-native-web": "^0.17.7",
     "react-spring": "^10.0.3",
+    "reactbits-mcp-server": "^1.2.7",
     "unpic": "^4.1.3"
   },
   "devDependencies": {
