--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "strictNullChecks": true,
     "allowJs": true,
     "baseUrl": ".",
+    "skipLibCheck": true,
     "paths": {
       "~/*": ["src/*"]
     }
