--- a/package.json
+++ b/package.json
@@ -31,16 +31,20 @@
     "@astrolib/seo": "^1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.2.6",
     "@fontsource-variable/montserrat": "^5.2.8",
+    "@gsap/react": "^2.1.2",
+    "@use-gesture/react": "^10.3.1",
     "astro": "^5.12.9",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
     "framer-motion": "^12.23.24",
     "git-filter-repo": "^0.0.30",
+    "gsap": "^3.13.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
-    "react-bits": "^1.0.5",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-native-web": "^0.17.7",
     "react-spring": "^10.0.3",
     "reactbits-mcp-server": "^1.2.7",
